--- a/css/scss/components/_button-go-up.scss
+++ b/css/scss/components/_button-go-up.scss
@@ -1,41 +1,3 @@
-// .button-go-up {
-//   background: transparent;
-//   position: fixed;
-//   top: 83%;
-//   right: 0;
-//   z-index: 500;
-//   display: none;
-
-//   @media #{$laptop_s} {
-//     display: none;
-//   }
-
-//   .btn-go-up {
-//     border-radius: 13px 0 0 13px;
-//     box-shadow: 0 4px 60px 0 rgba(0, 0, 0, 0.15);
-//     background: rgba(25, 33, 50, 0.8);
-//     padding: 0 18px;
-//   }
-//   .btn-go-up:hover {
-//     border-radius: 13px 0 0 13px;
-//     background: rgba(25, 23, 30, 0.8);
-//     padding: 0 18px;
-
-//     svg {
-//       color: #fff;
-//     }
-//   }
-// }
-
-// .button-go-up__show {
-//   display: block;
-
-//   @media #{$laptop_s} {
-//     display: none;
-//   }
-// }
-
-
 .down-button {
   display: inline-flex;
   position: absolute;
@@ -54,17 +16,17 @@
   backdrop-filter: blur(3px);
   z-index: 10;
 
-     @media #{$tablet} {
-       top: 850px;
-     }
+  @media #{$tablet} {
+    top: 850px;
+  }
 
-    @media #{$tablet-mini} {
-      top: 650px;
-    }
+  @media #{$tablet-mini} {
+    top: 650px;
+  }
 
-    @media #{$phone} {
-      display: none;
-    }
+  @media #{$phone} {
+    display: none;
+  }
 
   .arrows {
     width: 40px;
@@ -72,13 +34,13 @@
     bottom: 20px;
   }
 
-  .arrows circle  {
+  .arrows circle {
     animation: arrow 1.75s infinite;
     -webkit-animation: arrow 1.75s infinite;
-    fill: #DF2C46;
+    fill: #df2c46;
   }
 
-  .arrows .a4  {
+  .arrows .a4 {
     animation: arrow 1.75s infinite;
     -webkit-animation: arrow 1.75s infinite;
     fill: #fff;
@@ -92,43 +54,57 @@
     fill: #fff;
   }
 
-  @keyframes arrow
-  {
-    0% {opacity:0}
-    40% {opacity:1}
-    80% {opacity:0}
-    100% {opacity:0}
+  @keyframes arrow {
+    0% {
+      opacity: 0;
+    }
+    40% {
+      opacity: 1;
+    }
+    80% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 0;
+    }
   }
 
-  @-webkit-keyframes arrow /*Safari and Chrome*/
-  {
-    0% {opacity:0}
-    40% {opacity:1}
-    80% {opacity:0}
-    100% {opacity:0}
+  @-webkit-keyframes arrow /*Safari and Chrome*/ {
+    0% {
+      opacity: 0;
+    }
+    40% {
+      opacity: 1;
+    }
+    80% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 0;
+    }
   }
 
   .arrows circle.a1 {
-    animation-delay:-0.75s;
-    -webkit-animation-delay:-0.75s; /* Safari 和 Chrome */
+    animation-delay: -0.75s;
+    -webkit-animation-delay: -0.75s; /* Safari 和 Chrome */
   }
 
   .arrows circle.b2 {
-    animation-delay:-0.50s;
-    -webkit-animation-delay:-0.50s; /* Safari 和 Chrome */
+    animation-delay: -0.5s;
+    -webkit-animation-delay: -0.5s; /* Safari 和 Chrome */
   }
 
   .arrows circle.a3 {
-    animation-delay:-0.25s;
-    -webkit-animation-delay:-0.25s; /* Safari 和 Chrome */
+    animation-delay: -0.25s;
+    -webkit-animation-delay: -0.25s; /* Safari 和 Chrome */
   }
   .arrows circle.a4 {
-    animation-delay:-0.15s;
-    -webkit-animation-delay:-0.15s; /* Safari 和 Chrome */
+    animation-delay: -0.15s;
+    -webkit-animation-delay: -0.15s; /* Safari 和 Chrome */
   }
   .arrows path.b4 {
-    animation-delay:0s;
-    -webkit-animation-delay:0s; /* Safari 和 Chrome */
+    animation-delay: 0s;
+    -webkit-animation-delay: 0s; /* Safari 和 Chrome */
   }
 }
 
@@ -144,9 +120,9 @@
   display: none;
   cursor: pointer;
 
-     @media #{$laptop_s} {
-       display: none;
-     }
+  @media #{$laptop_s} {
+    display: none;
+  }
 
   .white-rotate {
     transform: rotate(180deg);
@@ -156,7 +132,7 @@
     width: 63px;
     height: 63px;
     border-radius: 63px;
-    background: rgba(0, 0, 0, 0.10);
+    background: rgba(0, 0, 0, 0.1);
     padding-top: 0;
     cursor: pointer;
 
@@ -174,10 +150,10 @@
   }
 }
 
- .button-go-up__show {
-   display: block;
+.button-go-up__show {
+  display: block;
 
-   @media #{$laptop_s} {
-     display: none;
-   }
- }
+  @media #{$laptop_s} {
+    display: none;
+  }
+}
