--- a/fonts/css/style.css
+++ b/fonts/css/style.css
@@ -2875,6 +2875,4 @@ main {
   font-style: normal;
   font-weight: 300;
   line-height: normal;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
