--- a/css/scss/components/_burger-menu.scss
+++ b/css/scss/components/_burger-menu.scss
@@ -1,9 +1,7 @@
 .burger-menu {
   position: fixed;
-  //top: 110px;
   width: 100%;
   height: 100%;
-  //z-index: 350;
   overflow-x: hidden;
   left: -100%;
   transition: 0.6s;
@@ -12,113 +10,116 @@
 
   z-index: 25;
   top: 0px;
-  //background-color: aqua;
   padding: 75px 10px 10px;
 
   @media #{$phone} {
     padding-top: 80px;
   }
 
-     .burger-menu__container {
-       position: relative;
-       display: flex;
-       flex-direction: column;
-       padding: 38px 29px 22px 29px;
-       border-radius: 34px;
-       background: linear-gradient(180deg, rgba(18, 22, 30, 0.00) 53.1%, rgba(10, 11, 14, 0.80) 100%) rgba(10, 11, 14, 0.8);
-       -webkit-backdrop-filter: blur(5px);
-       backdrop-filter: blur(5px);
-       width: 100%;
-       height: 100%;
+  .burger-menu__container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding: 38px 29px 22px 29px;
+    border-radius: 34px;
+    background: linear-gradient(
+        180deg,
+        rgba(18, 22, 30, 0) 53.1%,
+        rgba(10, 11, 14, 0.8) 100%
+      )
+      rgba(10, 11, 14, 0.8);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    width: 100%;
+    height: 100%;
 
-       .burger__nav {
-         display: flex;
-         flex-direction: column;
-         margin-bottom: 324px;
+    .burger__nav {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 324px;
 
-         ul {
-           display: flex;
-           flex-direction: column;
+      ul {
+        display: flex;
+        flex-direction: column;
 
-           li {
-             color: #FFF;
-             font-family: $font-family-title;
-             font-size: 15px;
-             font-style: normal;
-             font-weight: 400;
-             line-height: normal;
-           }
+        li {
+          color: #fff;
+          font-family: $font-family-title;
+          font-size: 15px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+        }
 
-           li:not(:last-child) {
-             margin-bottom: 25px;
-           }
-         }
-       }
+        li:not(:last-child) {
+          margin-bottom: 25px;
+        }
+      }
+    }
 
-       .burger__contact {
-         display: flex;
-         flex-direction: column;
-         align-items: center;
-         //margin-bottom: 17px;
-         position: fixed;
-         bottom: 62px;
-         left: 0;
-         right: 0;
+    .burger__contact {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      //margin-bottom: 17px;
+      position: fixed;
+      bottom: 62px;
+      left: 0;
+      right: 0;
 
-         a {
-           color: rgba(223, 44, 70, 0.30);
-           font-size: 25px;
-           font-style: normal;
-           font-weight: 400;
-           line-height: normal;
+      a {
+        color: rgba(223, 44, 70, 0.3);
+        font-size: 25px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
 
-           strong {
-             color: #CF162B;
-             font-size: 25px;
-             font-style: normal;
-             font-weight: 400;
-             line-height: normal;
-           }
-         }
-       }
+        strong {
+          color: #cf162b;
+          font-size: 25px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+        }
+      }
+    }
 
-       .burger__social {
-         display: flex;
-         justify-content: center;
-         position: fixed;
-         bottom: 22px;
-         left: 0;
-         right: 0;
+    .burger__social {
+      display: flex;
+      justify-content: center;
+      position: fixed;
+      bottom: 22px;
+      left: 0;
+      right: 0;
 
-         ul {
-           li {
-             a {
-               svg {
-                 color: #E9E9E9;
-               }
-             }
-           }
-         }
-       }
+      ul {
+        li {
+          a {
+            svg {
+              color: #e9e9e9;
+            }
+          }
+        }
+      }
+    }
 
-       .btn__burger-close {
-         position: absolute;
-         width: 30px;
-         height: 30px;
-         top: 23px;
-         right: 20px;
-         background-color: transparent;
-         border: none;
-         outline: none;
+    .btn__burger-close {
+      position: absolute;
+      width: 30px;
+      height: 30px;
+      top: 23px;
+      right: 20px;
+      background-color: transparent;
+      border: none;
+      outline: none;
 
-         svg {
-           background-color: transparent;
-           color: #3A4059;
-         }
-       }
-     }
+      svg {
+        background-color: transparent;
+        color: #3a4059;
+      }
+    }
+  }
 }
-
 
 .burger-menu {
   .animate {
