--- a/css/scss/components/_consultation.scss
+++ b/css/scss/components/_consultation.scss
@@ -10,7 +10,7 @@
   height: 710px;
 
   @media #{$tablet} {
-    height: 1100px;;
+    height: 1100px;
   }
 
   @media #{$phone} {
@@ -36,18 +36,18 @@
       display: flex;
       justify-content: space-between;
 
-       @media #{$tablet} {
-         flex-direction: column;
-         align-items: center;
-       }
+      @media #{$tablet} {
+        flex-direction: column;
+        align-items: center;
+      }
 
       .consultation__form-content {
         margin-right: 30px;
 
-         @media #{$tablet} {
-           margin-right: 0;
-           text-align: center;
-         }
+        @media #{$tablet} {
+          margin-right: 0;
+          text-align: center;
+        }
 
         form {
           label {
@@ -112,7 +112,7 @@
           }
 
           ::placeholder {
-            color: #FFF;
+            color: #fff;
             font-family: $font-family-base;
             font-size: 14px;
             font-style: normal;
@@ -166,7 +166,6 @@
           top: 71px;
           left: 0;
           right: 0;
-
         }
 
         @media #{$phone_s} {
@@ -219,8 +218,6 @@
             height: 100%;
             object-fit: cover;
           }
-
-
         }
 
         .foto__map_mob {
@@ -251,7 +248,6 @@
             height: auto;
             //object-fit: contain;
           }
-
         }
       }
     }
