--- a/css/scss/components/_header.scss
+++ b/css/scss/components/_header.scss
@@ -26,7 +26,7 @@
 
     img {
       //width: 100%;
-      height: 100%; 
+      height: 100%;
       object-fit: cover;
     }
   }
@@ -85,7 +85,6 @@
   left: 0;
   right: 0;
 
-
   &__container {
     align-items: center;
     padding: 26px;
@@ -97,14 +96,14 @@
     //background: rgba(5, 12, 19, 0.2);
     background: rgba(0, 0, 0, 0.15);
     -webkit-backdrop-filter: blur(10px);
-      backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
 
     @media #{$laptop_s} {
       margin-top: 15px;
       //padding: 10px 22px 10px 12px;
       padding: 0 27px 6px 17px;
       border-radius: 25px;
-      background: rgba(14, 2, 3, 0.30);
+      background: rgba(14, 2, 3, 0.3);
       -webkit-backdrop-filter: blur(5px);
       backdrop-filter: blur(5px);
     }
@@ -141,10 +140,9 @@
       }
 
       .social__item {
-
         .social__link {
           svg {
-           color: $color-granat-contact;
+            color: $color-granat-contact;
             // opacity: 0.6;
           }
         }
@@ -167,12 +165,10 @@
       }
 
       .contact__tel_mob {
-
         svg {
           vertical-align: bottom;
         }
       }
-
     }
 
     .header__burger {
@@ -197,7 +193,7 @@
         .burger__line {
           height: 2px;
           width: 100%;
-          background-color: #E2E2E2;
+          background-color: #e2e2e2;
           margin: 0;
           padding: 0;
         }
@@ -208,33 +204,4 @@
       }
     }
   }
-
-  //.header__container::before {
-  //  position: absolute;
-  //  content: '';
-  //  z-index: -1;
-  //  //display: block;
-  //  top: 0;
-  //  left: 0;
-  //  right: 0;
-  //  bottom: 0;
-  //  //background: rgba(5, 12, 19, 0.6);
-  //  //background: rgba(12, 17, 19, 0.9);
-  //  //height: 346px;
-  //  pointer-events: none;
-  //  border-radius: 34px;
-  //}
 }
-
-//.header::before {
-//  position: absolute;
-//  content: '';
-//  z-index: -1;
-//  top: 0;
-//  left: 0;
-//  right: 0;
-//  bottom: 0;
-//  background: linear-gradient(180deg, #020a11 0%, rgba(5, 12, 19, 0) 100%);
-//  //height: 346px;
-//  pointer-events: none;
-//}
