--- a/css/scss/components/_infra.scss
+++ b/css/scss/components/_infra.scss
@@ -25,11 +25,11 @@
       }
 
       @media #{$laptop} {
-        width: calc(100%  / 3);
+        width: calc(100% / 3);
       }
 
       @media #{$laptop_s} {
-        width: calc(100%  / 2);
+        width: calc(100% / 2);
       }
 
       @media #{$phone} {
@@ -62,7 +62,7 @@
           padding-right: 10px;
           width: 100%;
 
-          color: #FFF;
+          color: #fff;
           font-family: $font-family-title;
           font-size: 18px;
           font-style: normal;
@@ -82,7 +82,7 @@
           }
 
           strong {
-            color: #DF2C46;
+            color: #df2c46;
             font-family: $font-family-base02;
             font-size: 50px;
             font-style: normal;
@@ -90,23 +90,23 @@
             line-height: normal;
 
             @media #{$notebook_s} {
-            font-size: 38px;
-          }
+              font-size: 38px;
+            }
 
             @media #{$laptop_s} {
-            font-size: 50px;
-          }
+              font-size: 50px;
+            }
 
-          @media #{$tablet-mini} {
-            font-size: 31px;
-          }
+            @media #{$tablet-mini} {
+              font-size: 31px;
+            }
 
-          @media #{$phone} {
-            font-size: 50px;
-          }
+            @media #{$phone} {
+              font-size: 50px;
+            }
 
             b {
-              color: #DF2C46;
+              color: #df2c46;
               font-family: $font-family-base02;
               font-size: 40px;
               font-style: normal;
@@ -155,11 +155,12 @@
       width: 65%;
       height: 511px;
       //border: 1px solid green;
-      background:url("../images/map/compas.svg")no-repeat 90px center/241px 241px,
-      url("../images/map/left.png") no-repeat right center/cover;
+      background: url('../images/map/compas.svg') no-repeat 90px center/241px
+          241px,
+        url('../images/map/left.png') no-repeat right center/cover;
 
       @media #{$desktop} {
-        background: url("../images/map/left.png") no-repeat right center/cover;
+        background: url('../images/map/left.png') no-repeat right center/cover;
       }
 
       @media #{$notebook_s} {
@@ -167,7 +168,7 @@
       }
 
       @media #{$tablet-mini} {
-        background: url("../images/map/bgmob.svg") no-repeat center/cover;
+        background: url('../images/map/bgmob.svg') no-repeat center/cover;
       }
     }
 
@@ -177,7 +178,7 @@
       content: '';
       top: 122px;
       right: 440px;
-      background: url("../images/map/01.svg")no-repeat;
+      background: url('../images/map/01.svg') no-repeat;
       width: 272px;
       height: 248px;
 
@@ -194,9 +195,9 @@
       top: -27px;
       left: 51%;
       border-radius: 590px;
-      border: 20px solid rgba(38, 47, 62, 0.50);
-      background:url("../images/map/logo.svg") no-repeat 212px 113px/360px 86px,
-      url("../images/map/big_map.svg") no-repeat center/contain #1F2632;
+      border: 20px solid rgba(38, 47, 62, 0.5);
+      background: url('../images/map/logo.svg') no-repeat 212px 113px/360px 86px,
+        url('../images/map/big_map.svg') no-repeat center/contain #1f2632;
 
       @media #{$desktop} {
         left: 52%;
@@ -212,7 +213,7 @@
       width: 35%;
       height: 511px;
       //border: 1px solid blue;
-      background-image: url("../images/hero/02.png");
+      background-image: url('../images/hero/02.png');
       background-position: right;
 
       @media #{$notebook_s} {
@@ -222,73 +223,57 @@
   }
 }
 
-  h3 {
-    color: #DF2C46;
-    text-align: center;
+h3 {
+  color: #df2c46;
+  text-align: center;
+  font-family: $font-family-base;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 38px; /* 50% */
+  margin-bottom: 7px;
+
+  @media #{$phone} {
+    font-size: 35px;
+    line-height: 30px;
+  }
+
+  strong {
+    color: #455a64;
     font-family: $font-family-base;
-    font-size: 50px;
+    font-size: 30px;
     font-style: normal;
     font-weight: 400;
-    line-height: 38px; /* 50% */
-    margin-bottom: 7px;
+    line-height: 40px;
 
     @media #{$phone} {
-      font-size: 35px;
+      font-size: 30px;
       line-height: 30px;
     }
-
-    strong {
-      color: #455A64;
-      font-family: $font-family-base;
-      font-size: 30px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 40px;
-
-      @media #{$phone} {
-        font-size: 30px;
-        line-height: 30px;
-      }
-    }
   }
+}
 
-  p {
-    color: #46565D;
-    font-family: $font-family-title;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-align: center;
-    margin-bottom: 61px;
+p {
+  color: #46565d;
+  font-family: $font-family-title;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-align: center;
+  margin-bottom: 61px;
 
-    @media #{$phone} {
-      font-size: 14px;
-      margin-bottom: 52px;
-    }
+  @media #{$phone} {
+    font-size: 14px;
+    margin-bottom: 52px;
   }
+}
 
-
-
-  .btn__infra {
-    color:#fff;
-    padding-left: 57px;
-    padding-right: 57px;
-  }
-
-  //.infra__container {
-  //
-  //  #infra-sections {
-  //
-  //    li {
-  //
-  //      a{
-  //
-  //      }
-  //    }
-  //  }
-  //}
-
+.btn__infra {
+  color: #fff;
+  padding-left: 57px;
+  padding-right: 57px;
+}
 
 .infra {
   padding-top: 40px;
@@ -362,10 +347,7 @@
 
 @media screen and (max-width: 999px) {
   .infra ul {
-    /*@include flex-wrap(wrap);
-    @include justify-content(center);*/
     display: none;
-
   }
 }
 
@@ -382,7 +364,7 @@
 }
 
 .infra ul li:first-child a {
-  color:#fff !important;
+  color: #fff !important;
   padding-left: 54px;
   padding-right: 54px;
   line-height: 50px;
@@ -402,28 +384,22 @@
   -webkit-align-items: center;
   -moz-align-items: center;
   align-items: center;
-  color: #3A4059;
+  color: #3a4059;
   font-family: $font-family-title;
   height: 30px;
   padding: 2px 10px 0 9px;
   text-align: center;
 }
-//
-//.infra ul li a:link, .infra ul li a:visited {
-//  text-decoration: none;
-//  font-size: 16px;
-//  color: #000000;
-//  line-height: 1em;
-//  border-bottom: 2px solid transparent;
-//}
 
-.infra ul li a.active, .infra ul li a:hover {
+.infra ul li a.active,
+.infra ul li a:hover {
   //color: $color-granat-title;
   color: rgb(144, 33, 48);
   transition: 0.3s linear;
 }
 
-.infra ul li a.active span:first-child, .infra ul li a:hover span:first-child {
+.infra ul li a.active span:first-child,
+.infra ul li a:hover span:first-child {
   //background: $color-granat-title;
   background: rgb(144, 33, 48);
   //border: 1px solid $color-granat-title;
@@ -437,15 +413,8 @@
   }
 }
 
-.infra ul li a .icon-circle {
-  //width: 50px;
-  //height: 50px;
-  //border-radius: 50%;
-  //background-color: #fff;
-}
-
 .infra ul li a span {
-  line-height: .8em;
+  line-height: 0.8em;
   display: inline-block;
 }
 
@@ -487,21 +456,17 @@
 
 @media screen and (max-width: 999px) {
   .infra {
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+  }
 }
 
 .infra__container {
   padding: 0 10px;
 }
 
-//.infra__container h3 {
-//  text-align: left;
-//  display: none;
-//}
-
 .infra__select {
   padding: 17px 10px 33px;
-  background: #1D2431;
+  background: #1d2431;
   margin-bottom: 0;
   margin-left: -10px;
   margin-right: -10px;
@@ -512,7 +477,7 @@
   position: absolute;
   width: 14px;
   height: 14px;
-  background: url("../images/map/arr_down.svg") no-repeat center/cover;
+  background: url('../images/map/arr_down.svg') no-repeat center/cover;
   top: 25%;
   right: 20px;
   pointer-events: none;
@@ -523,19 +488,11 @@
   line-height: 48px;
   height: 48px;
   border: 2px solid transparent;
-  background: rgba(255, 255, 255, 0.10);
-  color: #81848D;
+  background: rgba(255, 255, 255, 0.1);
+  color: #81848d;
   box-sizing: border-box;
   padding: 0 20px;
   font-size: 18px;
   width: 100%;
   outline: none;
 }
-
-//.infra__select select:first-child {
-//  color: #fff;
-//}
-//
-//.infra__select select:not(:first-child) {
-//  color: #6a3030;
-//}
