--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,7 @@ a {
 }
 
 .contact__tel_mob svg {
-  color: #E2E2E2;
+  color: #e2e2e2;
 }
 
 .contact__tel_mob:hover svg {
@@ -533,7 +533,7 @@ a {
 .header__container .header__burger .header__burger_open .burger__line {
   height: 2px;
   width: 100%;
-  background-color: #E2E2E2;
+  background-color: #e2e2e2;
   margin: 0;
   padding: 0;
 }
@@ -753,7 +753,7 @@ main {
   flex-direction: column;
 }
 .burger-menu .burger-menu__container .burger__nav ul li {
-  color: #FFF;
+  color: #fff;
   font-family: "Gilroy", sans-serif;
   font-size: 15px;
   font-style: normal;
@@ -780,7 +780,7 @@ main {
   line-height: normal;
 }
 .burger-menu .burger-menu__container .burger__contact a strong {
-  color: #CF162B;
+  color: #cf162b;
   font-size: 25px;
   font-style: normal;
   font-weight: 400;
@@ -795,7 +795,7 @@ main {
   right: 0;
 }
 .burger-menu .burger-menu__container .burger__social ul li a svg {
-  color: #E9E9E9;
+  color: #e9e9e9;
 }
 .burger-menu .burger-menu__container .btn__burger-close {
   position: absolute;
@@ -809,7 +809,7 @@ main {
 }
 .burger-menu .burger-menu__container .btn__burger-close svg {
   background-color: transparent;
-  color: #3A4059;
+  color: #3a4059;
 }
 
 .burger-menu .animate {
@@ -1131,7 +1131,7 @@ main {
 .down-button .arrows circle {
   animation: arrow 1.75s infinite;
   -webkit-animation: arrow 1.75s infinite;
-  fill: #DF2C46;
+  fill: #df2c46;
 }
 .down-button .arrows .a4 {
   animation: arrow 1.75s infinite;
@@ -1437,6 +1437,7 @@ main {
     align-self: center;
   }
 }
+
 .choose .choose__container {
   background-image: url("../images/project/0201.png");
   background-repeat: no-repeat;
@@ -1917,345 +1918,6 @@ main {
   transition: opacity 0.9s linear;
 }
 
-.infrastructure h2 {
-  color: #DF2C46;
-  text-align: center;
-  font-family: "Anticva", sans-serif;
-  font-size: 50px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 38px; /* 50% */
-  margin-bottom: 7px;
-}
-@media screen and (max-width: 500px) {
-  .infrastructure h2 {
-    font-size: 35px;
-    line-height: 30px;
-  }
-}
-.infrastructure h2 strong {
-  color: #455A64;
-  font-family: "Anticva", sans-serif;
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 40px;
-}
-@media screen and (max-width: 500px) {
-  .infrastructure h2 strong {
-    font-size: 30px;
-    line-height: 30px;
-  }
-}
-.infrastructure p {
-  color: #46565D;
-  font-family: "Gilroy", sans-serif;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  text-align: center;
-  margin-bottom: 61px;
-}
-@media screen and (max-width: 500px) {
-  .infrastructure p {
-    font-size: 14px;
-  }
-}
-.infrastructure .infrastructure__container {
-  margin: 0 auto;
-  max-width: 1540px;
-  width: 100%;
-  background-color: #fff;
-  text-align: center;
-  margin-bottom: 91px;
-}
-@media screen and (max-width: 500px) {
-  .infrastructure .infrastructure__container {
-    background-color: transparent;
-  }
-}
-.infrastructure .infrastructure__container ul {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  margin-top: 0;
-  padding: 0 10px;
-}
-@media screen and (max-width: 500px) {
-  .infrastructure .infrastructure__container ul {
-    justify-content: center;
-  }
-}
-.infrastructure .infrastructure__container ul li {
-  width: 380px;
-  margin-top: -30px;
-  padding: 0 10px;
-}
-@media screen and (max-width: 1680px) {
-  .infrastructure .infrastructure__container ul li {
-    width: 25%;
-  }
-}
-@media screen and (max-width: 1440px) {
-  .infrastructure .infrastructure__container ul li {
-    width: 33.3333333333%;
-  }
-}
-@media screen and (max-width: 1024px) {
-  .infrastructure .infrastructure__container ul li {
-    width: 50%;
-  }
-}
-@media screen and (max-width: 500px) {
-  .infrastructure .infrastructure__container ul li {
-    margin-top: 0;
-    padding: 0;
-    margin-bottom: 27px;
-    width: 100%;
-  }
-}
-.infrastructure .infrastructure__container ul li div {
-  width: 100%;
-}
-@media screen and (max-width: 500px) {
-  .infrastructure .infrastructure__container ul li div {
-    position: relative;
-  }
-}
-.infrastructure .infrastructure__container ul li div img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-.infrastructure .infrastructure__container ul li div div {
-  position: relative;
-  z-index: 10;
-  top: -60px;
-  left: 0;
-  text-align: start;
-  padding-left: 10px;
-  padding-right: 10px;
-  width: 100%;
-  color: #FFF;
-  font-family: "Gilroy", sans-serif;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 15px; /* 83.333% */
-}
-@media screen and (max-width: 500px) {
-  .infrastructure .infrastructure__container ul li div div {
-    position: absolute;
-    top: auto;
-    bottom: 10px;
-    left: 0;
-  }
-}
-.infrastructure .infrastructure__container ul li div div strong {
-  color: #DF2C46;
-  font-family: "Bebas Neue", sans-serif;
-  font-size: 50px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-}
-.infrastructure .infrastructure__container ul li div div strong b {
-  color: #DF2C46;
-  font-family: "Bebas Neue", sans-serif;
-  font-size: 40px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  text-transform: lowercase;
-}
-.infrastructure .infrastructure__lists {
-  display: flex;
-  margin-bottom: 70px;
-}
-@media screen and (max-width: 999px) {
-  .infrastructure .infrastructure__lists {
-    display: none;
-  }
-}
-.infrastructure .infrastructure__lists .btn__infrastructure {
-  margin-right: 30px;
-  padding-left: 54px;
-  padding-right: 54px;
-}
-.infrastructure .infrastructure__lists ul {
-  display: flex;
-  flex-wrap: wrap;
-}
-.infrastructure .infrastructure__lists ul li {
-  margin-right: 29px;
-}
-.infrastructure .infrastructure__lists ul li a {
-  display: inline-flex;
-  color: #3A4059;
-  font-family: "Gilroy", sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  align-items: center;
-}
-.infrastructure .infrastructure__lists ul li a span {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  width: 50px;
-  height: 50px;
-  background-color: #fff;
-  border-radius: 50%;
-  margin-right: 5px;
-}
-.infrastructure .infrastructure__lists ul li:last-of-type {
-  margin-right: 0;
-}
-.infrastructure .infrastructure__lists_mob {
-  display: none;
-  background: #007aff;
-}
-@media screen and (max-width: 999px) {
-  .infrastructure .infrastructure__lists_mob {
-    display: flex;
-  }
-}
-.infrastructure .infrastructure__lists_mob .dropdown {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-}
-.infrastructure .infrastructure__lists_mob .dropdown li {
-  background: #1D2431;
-  padding: 17px 10px 33px;
-  width: 100%;
-}
-.infrastructure .infrastructure__lists_mob .dropdown li .btn__infrastructure {
-  position: relative;
-  width: 100%;
-  border-radius: 23.5px;
-  background: rgba(255, 255, 255, 0.1);
-}
-.infrastructure .infrastructure__lists_mob .dropdown li .btn__infrastructure::before {
-  position: absolute;
-  content: "";
-  width: 12px;
-  height: 12px;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 30px;
-  background: url("../images/map/arr_down.svg") no-repeat;
-}
-.infrastructure .infrastructure__lists_mob .dropdown li ul {
-  margin-bottom: 70px;
-  flex-direction: column;
-  display: none;
-}
-.infrastructure .infrastructure__lists_mob .dropdown li ul li a {
-  display: inline-flex;
-  color: #3A4059;
-  font-family: "Gilroy", sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  align-items: center;
-}
-.infrastructure .infrastructure__lists_mob .dropdown li ul li span {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  width: 50px;
-  height: 50px;
-  background-color: #fff;
-  border-radius: 50%;
-  margin-right: 10px;
-}
-.infrastructure .map__wrapper {
-  position: relative;
-  width: 100%;
-  display: flex;
-  flex-wrap: nowrap;
-  margin-bottom: 286px;
-}
-@media screen and (max-width: 500px) {
-  .infrastructure .map__wrapper {
-    margin-bottom: 57px;
-  }
-}
-.infrastructure .map__wrapper .left {
-  position: relative;
-  display: inline-flex;
-  width: 65%;
-  height: 511px;
-  background: url("../images/map/compas.svg") no-repeat 90px center/241px 241px, url("../images/map/left.png") no-repeat right center/cover;
-}
-@media screen and (max-width: 1680px) {
-  .infrastructure .map__wrapper .left {
-    background: url("../images/map/left.png") no-repeat right center/cover;
-  }
-}
-@media screen and (max-width: 1280px) {
-  .infrastructure .map__wrapper .left {
-    width: 100%;
-  }
-}
-@media screen and (max-width: 767px) {
-  .infrastructure .map__wrapper .left {
-    background: url("../images/map/bgmob.svg") no-repeat center/cover;
-  }
-}
-.infrastructure .map__wrapper .left::before {
-  position: absolute;
-  display: block;
-  content: "";
-  top: 122px;
-  right: 440px;
-  background: url("../images/map/01.svg") no-repeat;
-  width: 272px;
-  height: 248px;
-}
-@media screen and (max-width: 767px) {
-  .infrastructure .map__wrapper .left::before {
-    content: none;
-  }
-}
-.infrastructure .map__wrapper .circle {
-  position: absolute;
-  z-index: 10;
-  width: 590px;
-  height: 590px;
-  top: -27px;
-  left: 51%;
-  border-radius: 590px;
-  border: 20px solid rgba(38, 47, 62, 0.5);
-  background: url("../images/map/logo.svg") no-repeat 212px 113px/360px 86px, url("../images/map/big_map.svg") no-repeat center/contain #1F2632;
-}
-@media screen and (max-width: 1680px) {
-  .infrastructure .map__wrapper .circle {
-    left: 54%;
-  }
-}
-@media screen and (max-width: 1280px) {
-  .infrastructure .map__wrapper .circle {
-    display: none;
-  }
-}
-.infrastructure .map__wrapper .right {
-  display: inline-flex;
-  width: 35%;
-  height: 511px;
-  background-image: url("../images/hero/02.png");
-  background-position: right;
-}
-@media screen and (max-width: 1280px) {
-  .infrastructure .map__wrapper .right {
-    display: none;
-  }
-}
-
 .infra .card {
   display: flex;
   flex-wrap: wrap;
@@ -2319,7 +1981,7 @@ main {
   padding-left: 10px;
   padding-right: 10px;
   width: 100%;
-  color: #FFF;
+  color: #fff;
   font-family: "Gilroy", sans-serif;
   font-size: 18px;
   font-style: normal;
@@ -2341,7 +2003,7 @@ main {
   }
 }
 .infra .card li div div strong {
-  color: #DF2C46;
+  color: #df2c46;
   font-family: "Bebas Neue", sans-serif;
   font-size: 50px;
   font-style: normal;
@@ -2369,7 +2031,7 @@ main {
   }
 }
 .infra .card li div div strong b {
-  color: #DF2C46;
+  color: #df2c46;
   font-family: "Bebas Neue", sans-serif;
   font-size: 40px;
   font-style: normal;
@@ -2455,7 +2117,7 @@ main {
   left: 51%;
   border-radius: 590px;
   border: 20px solid rgba(38, 47, 62, 0.5);
-  background: url("../images/map/logo.svg") no-repeat 212px 113px/360px 86px, url("../images/map/big_map.svg") no-repeat center/contain #1F2632;
+  background: url("../images/map/logo.svg") no-repeat 212px 113px/360px 86px, url("../images/map/big_map.svg") no-repeat center/contain #1f2632;
 }
 @media screen and (max-width: 1680px) {
   .infra .map__wrapper .circle {
@@ -2481,7 +2143,7 @@ main {
 }
 
 h3 {
-  color: #DF2C46;
+  color: #df2c46;
   text-align: center;
   font-family: "Anticva", sans-serif;
   font-size: 50px;
@@ -2497,7 +2159,7 @@ h3 {
   }
 }
 h3 strong {
-  color: #455A64;
+  color: #455a64;
   font-family: "Anticva", sans-serif;
   font-size: 30px;
   font-style: normal;
@@ -2512,7 +2174,7 @@ h3 strong {
 }
 
 p {
-  color: #46565D;
+  color: #46565d;
   font-family: "Gilroy", sans-serif;
   font-size: 20px;
   font-style: normal;
@@ -2602,8 +2264,6 @@ p {
 
 @media screen and (max-width: 999px) {
   .infra ul {
-    /*@include flex-wrap(wrap);
-    @include justify-content(center);*/
     display: none;
   }
 }
@@ -2637,24 +2297,27 @@ p {
   -webkit-align-items: center;
   -moz-align-items: center;
   align-items: center;
-  color: #3A4059;
+  color: #3a4059;
   font-family: "Gilroy", sans-serif;
   height: 30px;
   padding: 2px 10px 0 9px;
   text-align: center;
 }
 
-.infra ul li a.active, .infra ul li a:hover {
+.infra ul li a.active,
+.infra ul li a:hover {
   color: rgb(144, 33, 48);
   transition: 0.3s linear;
 }
 
-.infra ul li a.active span:first-child, .infra ul li a:hover span:first-child {
+.infra ul li a.active span:first-child,
+.infra ul li a:hover span:first-child {
   background: rgb(144, 33, 48);
   border: 1px solid rgb(144, 33, 48);
   transition: 0.3s linear;
 }
-.infra ul li a.active span:first-child svg path, .infra ul li a:hover span:first-child svg path {
+.infra ul li a.active span:first-child svg path,
+.infra ul li a:hover span:first-child svg path {
   fill: #fff;
 }
 
@@ -2706,7 +2369,7 @@ p {
 
 .infra__select {
   padding: 17px 10px 33px;
-  background: #1D2431;
+  background: #1d2431;
   margin-bottom: 0;
   margin-left: -10px;
   margin-right: -10px;
@@ -2729,7 +2392,7 @@ p {
   height: 48px;
   border: 2px solid transparent;
   background: rgba(255, 255, 255, 0.1);
-  color: #81848D;
+  color: #81848d;
   box-sizing: border-box;
   padding: 0 20px;
   font-size: 18px;
@@ -3490,7 +3153,7 @@ p {
   text-transform: uppercase;
 }
 .consultation .consultation__container .consultation__form-wrapper .consultation__form-content form ::placeholder {
-  color: #FFF;
+  color: #fff;
   font-family: "Anticva", sans-serif;
   font-size: 14px;
   font-style: normal;
@@ -3633,10 +3296,10 @@ p {
   font-size: 16px;
   text-transform: uppercase;
   display: inline-block;
-  background: linear-gradient(319deg, rgb(144, 33, 48) 0%, #2D050A 100%);
+  background: linear-gradient(319deg, rgb(144, 33, 48) 0%, #2d050a 100%);
   position: relative;
   transition: 0.3s all linear;
-  color: #FFF;
+  color: #fff;
   cursor: pointer;
   white-space: nowrap;
   outline: none;
@@ -3654,12 +3317,12 @@ p {
   }
 }
 .btn:hover {
-  background: linear-gradient(62deg, rgb(144, 33, 48) 0%, #2D050A 100%);
+  background: linear-gradient(62deg, rgb(144, 33, 48) 0%, #2d050a 100%);
   transition: 0.3s linear;
 }
 .btn:active {
   color: #904852;
-  background: linear-gradient(62deg, rgb(144, 33, 48) 0%, #2D050A 100%);
+  background: linear-gradient(62deg, rgb(144, 33, 48) 0%, #2d050a 100%);
   box-shadow: 0 4px 25px 0 rgba(14, 50, 84, 0.44);
 }
 
@@ -3917,6 +3580,4 @@ p {
 }
 .modal2.fancybox__content .f-button.is-close-btn:hover {
   background: url("../images/fansy/close03.svg") no-repeat center/contain !important;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
