--- a/images/css/style.css
+++ b/images/css/style.css
@@ -3221,6 +3221,4 @@ main {
   font-style: normal;
   font-weight: 300;
   line-height: normal;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
