--- a/script/css/style.css
+++ b/script/css/style.css
@@ -2456,6 +2456,4 @@ main {
   right: 0;
   bottom: 0;
   opacity: 0.5;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
